# evm

./: README.md
n1/: CMakeLists.txt  Lab1_Ковалев_19203.doc  Lab2_Ковалев_19203.doc  Lab3_Ковалев_19203.doc  Lab4_Ковалев_19203.doc  main.cpp
n5/: CMakeLists.txt  Lab5_Ковалев_19203.doc  main.cpp
n6/: CMakeLists.txt  Lab6_Ковалев_19203.doc  main.c
n7/: CMakeLists.txt  Lab7_Ковалев_19203.doc  main.cpp  main0.cpp  main1.cpp
n8/: CMakeLists.txt  Lab8_Ковалев_19203.doc  main.cpp
n9/: CMakeLists.txt  Lab9_Ковалев_19203.doc  main.cpp
